Source/WebCore/page/PageColorSampler.cpp
@@ -114,30 +114,43 @@ static bool isValidSampleLocation(Document& document, const IntPoint& location)
     return true;
 }
 
-static std::optional<Lab<float>> sampleColor(Document& document, IntPoint&& location)
+static RefPtr<PixelBuffer> takeRowSnapshot(Document& document, IntPoint&& topRight)
 {
     // FIXME: <https://webkit.org/b/225167> (Sampled Page Top Color: hook into painting logic instead of taking snapshots)
-
-    if (!isValidSampleLocation(document, location))
-        return std::nullopt;
-
     // FIXME: <https://webkit.org/b/225942> (Sampled Page Top Color: support sampling non-RGB values like P3)
+
+    static constexpr OptionSet snapshotFlags {
+        SnapshotFlags::ExcludeSelectionHighlighting,
+        SnapshotFlags::PaintEverythingExcludingSelection,
+        SnapshotFlags::FastAndLowQualityFilters
+    };
+
     auto colorSpace = DestinationColorSpace::SRGB();
+    auto rect = IntRect { { 0, topRight.y() }, { topRight.x() + 1, 1 } };
 
     ASSERT(document.view());
-    auto snapshot = snapshotFrameRect(protect(document.view()->frame()), IntRect(location, IntSize(1, 1)), { { SnapshotFlags::ExcludeSelectionHighlighting, SnapshotFlags::PaintEverythingExcludingSelection }, PixelFormat::BGRA8, colorSpace });
+    auto snapshot = snapshotFrameRect(protect(document.view()->frame()), rect, { snapshotFlags, PixelFormat::BGRA8, colorSpace });
     if (!snapshot)
-        return std::nullopt;
+        return nullptr;
 
     auto pixelBuffer = snapshot->getPixelBuffer({ AlphaPremultiplication::Unpremultiplied, PixelFormat::BGRA8, colorSpace }, { { }, snapshot->truncatedLogicalSize() });
     if (!pixelBuffer)
+        return nullptr;
+
+    if (pixelBuffer->bytes().size() < rect.area() * 4)
+        return nullptr;
+
+    return pixelBuffer;
+}
+
+static std::optional<Lab<float>> sampleColor(Document& document, const PixelBuffer& rowPixelBuffer, const IntPoint& location)
+{
+    if (!isValidSampleLocation(document, location))
         return std::nullopt;
 
-    if (pixelBuffer->bytes().size() < 4)
-        return std::nullopt;
-
-    auto snapshotData = pixelBuffer->bytes();
-    return convertColor<Lab<float>>(SRGBA<uint8_t> { snapshotData[2], snapshotData[1], snapshotData[0], snapshotData[3] });
+    auto pixels = rowPixelBuffer.bytes();
+    auto pixel = pixels.subspan(location.x() * 4, 4);
+    return convertColor<Lab<float>>(SRGBA<uint8_t> { pixel[2], pixel[1], pixel[0], pixel[3] });
 }
 
 static double colorDifference(const Lab<float>& lhs, const Lab<float>& rhs)
@@ -192,8 +205,7 @@ std::optional<Color> PageColorSampler::sampleTop(Page& page)
     if (!frameView->isVisuallyNonEmpty() || !frameView->hasContentfulDescendants() || !ContentfulPaintChecker::qualifiesForContentfulPaint(*frameView))
         return std::nullopt;
 
-    // Decrease the width by one pixel so that the last sample is within bounds and not off-by-one.
-    auto frameWidth = frameView->contentsWidth() - 1;
+    auto frameWidth = frameView->contentsWidth();
 
     static constexpr auto numSamples = 5;
     size_t nonMatchingColorIndex = numSamples;
@@ -210,8 +222,13 @@ std::optional<Color> PageColorSampler::sampleTop(Page& page)
         return false;
     };
 
+    RefPtr topPagePixelBuffer = takeRowSnapshot(*mainDocument, IntPoint(frameWidth - 1, 0));
+    if (!topPagePixelBuffer)
+        return Color();
+
     for (size_t i = 0; i < numSamples; ++i) {
-        auto sample = sampleColor(*mainDocument, IntPoint(frameWidth * i / (numSamples - 1), 0));
+        auto column = (i == numSamples - 1) ? frameWidth - 1 : frameWidth * i / (numSamples - 1);
+        auto sample = sampleColor(*mainDocument, *topPagePixelBuffer, IntPoint(column, 0));
         if (!sample) {
             if (shouldStopAfterFindingNonMatchingColor(i))
                 return Color();
@@ -256,17 +273,21 @@ std::optional<Color> PageColorSampler::sampleTop(Page& page)
     }
 
     // Decrease the height by one pixel so that the last sample is within bounds and not off-by-one.
-    auto minHeight = page.settings().sampledPageTopColorMinHeight() - 1;
-    if (minHeight > 0) {
+    int minY = static_cast<int>(page.settings().sampledPageTopColorMinHeight() - 1);
+    if (minY > 0) {
+        RefPtr minYPixelBuffer = takeRowSnapshot(*mainDocument, IntPoint(frameWidth - 1, minY));
+        if (!minYPixelBuffer)
+            return Color();
+
         if (nonMatchingColorIndex) {
-            if (auto leftMiddleSample = sampleColor(*mainDocument, IntPoint(0, minHeight))) {
+            if (auto leftMiddleSample = sampleColor(*mainDocument, *minYPixelBuffer, IntPoint(0, minY))) {
                 if (colorDifference(*leftMiddleSample, samples[0]) > maxDifference)
                     return Color();
             }
         }
 
         if (nonMatchingColorIndex != numSamples - 1) {
-            if (auto rightMiddleSample = sampleColor(*mainDocument, IntPoint(frameWidth, minHeight))) {
+            if (auto rightMiddleSample = sampleColor(*mainDocument, *minYPixelBuffer, IntPoint(frameWidth - 1, minY))) {
                 if (colorDifference(*rightMiddleSample, samples[numSamples - 1]) > maxDifference)
                     return Color();
             }
